--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+table,td,th,tr{
+	border:1px solid black;
+	border border-collapse: collapse;
+}
+table{
+	background-color:yellow;
+}
+th,td{
+	padding:8px;
+	text-align:center;
+}
